[gd_scene load_steps=59 format=4]

[ext_resource type="Script" path="res://Scripts/Final.gd" id="1"]
[ext_resource type="FontFile" uid="uid://cmyjws0sa77a1" path="res://Assets/Fonts/Nacho.ttf" id="2"]
[ext_resource type="Texture2D" uid="uid://cqmxhel8us5yw" path="res://Assets/Graphics/Text_border.png" id="3"]
[ext_resource type="PackedScene" uid="uid://4mtma7rrk5eo" path="res://Scenes/Trophie.tscn" id="4"]
[ext_resource type="Texture2D" uid="uid://ctvd1tonxi0bp" path="res://Assets/Graphics/Doppel_Left_Hand.png" id="5"]
[ext_resource type="Texture2D" uid="uid://2jykqmu3dawr" path="res://Assets/Graphics/Doppel_Right_Hand.png" id="6"]
[ext_resource type="Texture2D" uid="uid://drxsacrflkrr5" path="res://Assets/Graphics/Hands_jail.png" id="7"]
[ext_resource type="Texture2D" uid="uid://nm6qk4wx2mtl" path="res://Assets/Graphics/White_video.png" id="8"]
[ext_resource type="Texture2D" uid="uid://d13euwrd2a27d" path="res://Assets/Graphics/Filter.png" id="9"]
[ext_resource type="Texture2D" uid="uid://4k1fc2owxw2s" path="res://Assets/Graphics/Wall.png" id="10"]
[ext_resource type="Texture2D" uid="uid://cvxpib0018mvr" path="res://Assets/Graphics/Folder_button_exit_hover.png" id="11"]
[ext_resource type="Texture2D" uid="uid://crec1s0arog0s" path="res://Assets/Graphics/Panic_window.png" id="12"]
[ext_resource type="Texture2D" uid="uid://ch0ldsrmub4ft" path="res://Assets/Graphics/Background.png" id="13"]
[ext_resource type="Texture2D" uid="uid://c081gu04ajx6w" path="res://Assets/Graphics/Panic_button.png" id="14"]
[ext_resource type="Texture2D" uid="uid://cmh8g7u0lw3ha" path="res://Assets/Graphics/Panic_glass_close.png" id="15"]
[ext_resource type="Texture2D" uid="uid://croh4p1s5jek1" path="res://Assets/Graphics/Table.png" id="16"]
[ext_resource type="Texture2D" uid="uid://dtf8ri8i2tsf7" path="res://Assets/Graphics/Phone_back.png" id="17"]
[ext_resource type="Texture2D" uid="uid://cd7kuffhg76o1" path="res://Assets/Graphics/Phone_top.png" id="18"]
[ext_resource type="Texture2D" uid="uid://crk31ryj1dvvj" path="res://Assets/Graphics/Phone_base.png" id="19"]
[ext_resource type="Texture2D" uid="uid://dqpgnxo4tysue" path="res://Assets/Graphics/Door_control.png" id="20"]
[ext_resource type="Texture2D" uid="uid://dovtqhs52dppi" path="res://Assets/Graphics/Door_button_unlock.png" id="21"]
[ext_resource type="Texture2D" uid="uid://bwf3q3067nyld" path="res://Assets/Graphics/Checklist_table.png" id="22"]
[ext_resource type="Texture2D" uid="uid://c784c1gugksww" path="res://Assets/Graphics/Folder_1.png" id="23"]
[ext_resource type="Texture2D" uid="uid://pblo7cayielk" path="res://Assets/Graphics/Folder_1_spanish.png" id="24"]
[ext_resource type="Texture2D" uid="uid://bpjkwavxie55c" path="res://Assets/Graphics/Folder_2.png" id="25"]
[ext_resource type="Texture2D" uid="uid://cp075wj2qmlur" path="res://Assets/Graphics/Folder_2_spanish.png" id="26"]
[ext_resource type="Texture2D" uid="uid://cqdbdp4wcst6p" path="res://Assets/Graphics/Folder_3.png" id="27"]
[ext_resource type="Texture2D" uid="uid://dro6ibj04okie" path="res://Assets/Graphics/Folder_3_spanish.png" id="28"]
[ext_resource type="Texture2D" uid="uid://dj8exx0kirs6l" path="res://Assets/Graphics/Table_game_over.png" id="29"]
[ext_resource type="Texture2D" uid="uid://gqqjwoy8fkxs" path="res://Assets/Graphics/Papers.png" id="30"]
[ext_resource type="Texture2D" uid="uid://7n6xjetiekmt" path="res://Assets/Graphics/paper_perspective.png" id="31"]
[ext_resource type="FontFile" uid="uid://d2lr6x8obuyag" path="res://Assets/Fonts/Funny.ttf" id="32"]
[ext_resource type="Texture2D" uid="uid://c24oae16ypu4i" path="res://Assets/Graphics/Border.png" id="33"]
[ext_resource type="Texture2D" uid="uid://7eb2pef2f15" path="res://Assets/Graphics/Paper.png" id="34"]
[ext_resource type="Texture2D" uid="uid://cvky0rsqjcdql" path="res://Assets/Graphics/DDD_logo.png" id="35"]
[ext_resource type="FontFile" uid="uid://3lgclirb633g" path="res://Assets/Fonts/Slasher.ttf" id="36"]
[ext_resource type="Texture2D" uid="uid://bw4vjoxgef0mr" path="res://Assets/Graphics/Folder_paper.png" id="37"]
[ext_resource type="Texture2D" uid="uid://bgf7x8h3selga" path="res://Assets/Graphics/frame_background.png" id="38"]
[ext_resource type="Texture2D" uid="uid://xgpve0vvsn3" path="res://Assets/Graphics/frame_paper.png" id="39"]
[ext_resource type="Texture2D" uid="uid://dsduywgs1mq0f" path="res://Assets/Graphics/frame.png" id="40"]
[ext_resource type="Texture2D" uid="uid://c4c3pq2ynl2a1" path="res://Assets/Graphics/Background_Nightmare.png" id="41"]
[ext_resource type="Texture2D" uid="uid://xu46c034adiw" path="res://Assets/Graphics/Dark.png" id="42"]
[ext_resource type="Texture2D" uid="uid://dg0t8capp4lvs" path="res://Assets/Graphics/Bag.png" id="43"]
[ext_resource type="AudioStream" uid="uid://dh60tcr61furm" path="res://Assets/SFX-Music/SFX_Window.wav" id="44"]
[ext_resource type="AudioStream" uid="uid://cyj738s713xhh" path="res://Assets/SFX-Music/SFX_Background.ogg" id="45"]
[ext_resource type="AudioStream" uid="uid://dr5dpjhv1dted" path="res://Assets/SFX-Music/SFX_Evil_Voice_01.wav" id="46"]
[ext_resource type="AudioStream" uid="uid://ckjft8dloxlkt" path="res://Assets/SFX-Music/SFX_Bite.wav" id="47"]
[ext_resource type="AudioStream" uid="uid://b4kii7ysdr5kn" path="res://Assets/SFX-Music/SFX_Magic_Dust.wav" id="48"]
[ext_resource type="AudioStream" uid="uid://c08ub35j0qwsm" path="res://Assets/SFX-Music/SFX_Jail.wav" id="49"]
[ext_resource type="AudioStream" uid="uid://dhv5xknp1vdqm" path="res://Assets/SFX-Music/SFX_Chains.wav" id="50"]
[ext_resource type="AudioStream" uid="uid://b7cwkpu1fivjx" path="res://Assets/SFX-Music/Music_Tutorial.wav" id="51"]
[ext_resource type="AudioStream" uid="uid://dq2opcunboupj" path="res://Assets/SFX-Music/SFX_Select.wav" id="52"]
[ext_resource type="AudioStream" uid="uid://dalcaapplmsmw" path="res://Assets/SFX-Music/SFX_Accept.wav" id="53"]
[ext_resource type="AudioStream" uid="uid://vrhgg0hjmdx4" path="res://Assets/SFX-Music/SFX_Zipper.wav" id="54"]
[ext_resource type="AudioStream" uid="uid://ct2bbahjhq6iy" path="res://Assets/SFX-Music/SFX_Light_Switch.wav" id="55"]

[sub_resource type="StyleBoxEmpty" id="1"]
script = null

[sub_resource type="StyleBoxEmpty" id="2"]
script = null

[sub_resource type="StyleBoxEmpty" id="3"]
script = null

[node name="Final" type="Node2D"]
script = ExtResource("1")

[node name="Camera" type="Camera2D" parent="."]
z_index = 51
position = Vector2(960, 540)

[node name="Text" type="Control" parent="Camera"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -15.0
offset_top = 333.0
offset_right = 25.0
offset_bottom = 373.0

[node name="Panel" type="Panel" parent="Camera/Text"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = -775.0
offset_top = -148.0
offset_right = -729.0
offset_bottom = -108.0
scale = Vector2(34.28, 8)

[node name="Label" type="Label" parent="Camera/Text"]
layout_mode = 0
offset_left = -756.0
offset_top = -122.0
offset_right = 788.0
offset_bottom = 158.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 18
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 80
text = "
"
horizontal_alignment = 1
autowrap_mode = 3
clip_text = true
visible_characters = 0
visible_characters_behavior = 1
visible_ratio = 0.0

[node name="Border" type="Sprite2D" parent="Camera/Text"]
position = Vector2(20, 15)
scale = Vector2(1.8, 1.8)
texture = ExtResource("3")

[node name="Time_Between_Text" type="Timer" parent="Camera/Text"]
wait_time = 0.5

[node name="Trophie" parent="Camera" instance=ExtResource("4")]
visible = false
z_index = 501
position = Vector2(788, 396)
scale = Vector2(0.01, 0.01)

[node name="Game_Over" type="Node2D" parent="Camera"]
visible = false
scale = Vector2(0.5, 0.5)

[node name="Left_Hand" type="Sprite2D" parent="Camera/Game_Over"]
position = Vector2(-3580, 1680)
texture = ExtResource("5")

[node name="Right_Hand" type="Sprite2D" parent="Camera/Game_Over"]
position = Vector2(3580, 1680)
texture = ExtResource("6")

[node name="Hands" type="Sprite2D" parent="Camera/Game_Over"]
visible = false
position = Vector2(0, 2000)
scale = Vector2(0.8, 0.8)
texture = ExtResource("7")

[node name="Black" type="Sprite2D" parent="Camera/Game_Over"]
visible = false
modulate = Color(0, 0, 0, 1)
z_index = 500
scale = Vector2(8, 4)
texture = ExtResource("8")

[node name="Office" type="Node2D" parent="."]
visible = false
z_index = -50

[node name="Filter" type="Sprite2D" parent="Office"]
z_index = 100
position = Vector2(974, 578)
scale = Vector2(0.472185, 0.495695)
texture = ExtResource("9")

[node name="Wall" type="Sprite2D" parent="Office"]
position = Vector2(962, 538)
scale = Vector2(0.45, 0.45)
texture = ExtResource("10")

[node name="x" type="Sprite2D" parent="Office/Wall"]
visible = false
modulate = Color(1, 0.411765, 0.411765, 1)
position = Vector2(-2237.78, -411.111)
texture = ExtResource("11")

[node name="x2" type="Sprite2D" parent="Office/Wall"]
visible = false
modulate = Color(1, 0.411765, 0.411765, 1)
position = Vector2(-2153.33, -400)
texture = ExtResource("11")

[node name="x3" type="Sprite2D" parent="Office/Wall"]
visible = false
modulate = Color(1, 0.411765, 0.411765, 1)
position = Vector2(-2073.33, -415.556)
texture = ExtResource("11")

[node name="x4" type="Sprite2D" parent="Office/Wall"]
visible = false
modulate = Color(1, 0.411765, 0.411765, 1)
position = Vector2(-1988.89, -406.667)
texture = ExtResource("11")

[node name="x5" type="Sprite2D" parent="Office/Wall"]
visible = false
modulate = Color(1, 0.411765, 0.411765, 1)
position = Vector2(-1906.67, -413.333)
texture = ExtResource("11")

[node name="x6" type="Sprite2D" parent="Office/Wall"]
visible = false
modulate = Color(1, 0.411765, 0.411765, 1)
position = Vector2(-2402.22, -333.333)
texture = ExtResource("11")

[node name="Window" type="Sprite2D" parent="Office"]
z_index = -1
position = Vector2(982, 400)
scale = Vector2(0.5, 0.5)
texture = ExtResource("12")

[node name="Back" type="Sprite2D" parent="Office"]
z_index = -50
position = Vector2(950, 560)
scale = Vector2(0.5, 0.5)
texture = ExtResource("13")

[node name="Danger" type="Node2D" parent="Office"]

[node name="Button_Danger" type="Sprite2D" parent="Office/Danger"]
position = Vector2(203, 738)
scale = Vector2(0.5, 0.5)
texture = ExtResource("14")

[node name="Case_Close" type="Sprite2D" parent="Office/Danger"]
position = Vector2(205, 737)
scale = Vector2(0.5, 0.5)
texture = ExtResource("15")

[node name="Work_Area" type="Node2D" parent="Office"]

[node name="Table" type="Sprite2D" parent="Office/Work_Area"]
z_index = 5
position = Vector2(1008, 1034)
scale = Vector2(0.55, 0.55)
texture = ExtResource("16")

[node name="Phone" type="Node2D" parent="Office/Work_Area"]
z_index = 10
position = Vector2(186, 979)

[node name="Phone_Back" type="Sprite2D" parent="Office/Work_Area/Phone"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("17")

[node name="Phone_Top" type="Sprite2D" parent="Office/Work_Area/Phone"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("18")

[node name="Phone_Base" type="Sprite2D" parent="Office/Work_Area/Phone"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("19")

[node name="Door_Access" type="Node2D" parent="Office/Work_Area"]
z_index = 9
position = Vector2(1697, 897)
scale = Vector2(1.2, 1.2)

[node name="Buttons" type="Sprite2D" parent="Office/Work_Area/Door_Access"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("20")

[node name="Disabled" type="Sprite2D" parent="Office/Work_Area/Door_Access"]
position = Vector2(-151.3, -14)
scale = Vector2(0.5, 0.5)
texture = ExtResource("21")

[node name="Checklists" type="Node2D" parent="Office/Work_Area"]
z_index = 10
position = Vector2(1139, 883)
scale = Vector2(0.5, 0.5)

[node name="Paper_sprite" type="Sprite2D" parent="Office/Work_Area/Checklists"]
position = Vector2(302, 266)
texture = ExtResource("22")

[node name="Folder_A_Sprite" type="Sprite2D" parent="Office"]
position = Vector2(1845, 150)
scale = Vector2(0.45, 0.45)
texture = ExtResource("23")

[node name="Folder_A_Sprite_Spanish" type="Sprite2D" parent="Office"]
visible = false
position = Vector2(1845, 150)
scale = Vector2(0.45, 0.45)
texture = ExtResource("24")

[node name="Folder_B_Sprite" type="Sprite2D" parent="Office"]
position = Vector2(1845, 396)
scale = Vector2(0.45, 0.45)
texture = ExtResource("25")

[node name="Folder_B_Sprite_Spanish" type="Sprite2D" parent="Office"]
visible = false
position = Vector2(1845, 396)
scale = Vector2(0.45, 0.45)
texture = ExtResource("26")

[node name="Folder_C_Sprite" type="Sprite2D" parent="Office"]
position = Vector2(1847.35, 638.025)
scale = Vector2(0.45, 0.45)
texture = ExtResource("27")

[node name="Folder_C_Sprite_Spanish" type="Sprite2D" parent="Office"]
visible = false
position = Vector2(1847.35, 638.025)
scale = Vector2(0.45, 0.45)
texture = ExtResource("28")

[node name="Table" type="Node2D" parent="."]
visible = false

[node name="Table" type="Sprite2D" parent="Table"]
position = Vector2(956, 524)
texture = ExtResource("29")

[node name="Paper_02" type="Sprite2D" parent="Table"]
position = Vector2(175, 467)
texture = ExtResource("30")

[node name="Paper_01" type="Sprite2D" parent="Table"]
position = Vector2(1489, 482)
texture = ExtResource("31")

[node name="All" type="Node2D" parent="Table/Paper_01"]
position = Vector2(51, 6)
scale = Vector2(0.9, 0.9)
skew = 0.10472

[node name="Text" type="Control" parent="Table/Paper_01/All"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Title" type="Label" parent="Table/Paper_01/All/Text"]
layout_mode = 0
offset_left = -363.37
offset_top = -510.575
offset_right = 366.63
offset_bottom = -410.575
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("32")
theme_override_font_sizes/font_size = 80
text = "Payout check"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Main" type="Label" parent="Table/Paper_01/All/Text"]
layout_mode = 0
offset_left = -364.734
offset_top = -385.445
offset_right = 365.266
offset_bottom = -285.445
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 40
theme_override_fonts/font = ExtResource("32")
theme_override_font_sizes/font_size = 64
text = "The D.D.D. thanks you for your service as the building's doorman over the past week.

For which you are paid a total of
We hope you
next week."
vertical_alignment = 1
autowrap_mode = 2

[node name="Border" type="Sprite2D" parent="Table/Paper_01/All"]
texture = ExtResource("33")

[node name="Paper_03" type="Sprite2D" parent="Table"]
position = Vector2(466, 526)
texture = ExtResource("34")

[node name="Border" type="Sprite2D" parent="Table/Paper_03"]
position = Vector2(0, -3)
texture = ExtResource("33")

[node name="DDD" type="Sprite2D" parent="Table/Paper_03"]
position = Vector2(220, 454)
scale = Vector2(0.6, 0.6)
texture = ExtResource("35")

[node name="Text" type="Control" parent="Table/Paper_03"]
layout_mode = 3
anchors_preset = 0
offset_left = 2.0
offset_top = -91.0
offset_right = 42.0
offset_bottom = -51.0

[node name="Title" type="Label" parent="Table/Paper_03/Text"]
layout_mode = 0
offset_left = -363.0
offset_top = -417.0
offset_right = 367.0
offset_bottom = -317.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("32")
theme_override_font_sizes/font_size = 80
text = "Campaign Summary"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Doppel_Label" type="Label" parent="Table/Paper_03/Text"]
layout_mode = 0
offset_left = -342.0
offset_top = -284.0
offset_right = 341.0
offset_bottom = -184.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("36")
theme_override_font_sizes/font_size = 55
text = "Doppels captured: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Doppel_Label2" type="Label" parent="Table/Paper_03/Text"]
layout_mode = 0
offset_left = -376.0
offset_top = -124.0
offset_right = 382.0
offset_bottom = -24.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("36")
theme_override_font_sizes/font_size = 55
text = "Doppels that entered: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Doppel_Label3" type="Label" parent="Table/Paper_03/Text"]
layout_mode = 0
offset_left = -377.0
offset_top = 42.0
offset_right = 381.0
offset_bottom = 142.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("36")
theme_override_font_sizes/font_size = 55
text = "Neighbors killed: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Menu" type="Button" parent="Table/Paper_03/Text"]
layout_mode = 0
offset_left = -351.0
offset_top = 196.0
offset_right = 85.0
offset_bottom = 373.0
scale = Vector2(0.75, 0.75)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 180
theme_override_styles/focus = SubResource("1")
action_mode = 0
text = "Menu"
flat = true

[node name="Record" type="Button" parent="Table/Paper_03/Text"]
layout_mode = 0
offset_left = -371.0
offset_top = 344.0
offset_right = 129.0
offset_bottom = 521.0
scale = Vector2(0.75, 0.75)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 180
theme_override_styles/focus = SubResource("2")
action_mode = 0
text = "Record"
flat = true

[node name="Quit" type="Button" parent="Table/Paper_03/Text"]
layout_mode = 0
offset_left = -352.0
offset_top = 485.0
offset_right = 84.0
offset_bottom = 662.0
scale = Vector2(0.75, 0.75)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 180
theme_override_styles/focus = SubResource("3")
action_mode = 0
text = "Quit"
flat = true

[node name="Paper_04" type="Sprite2D" parent="Table"]
position = Vector2(1784, 1033)
texture = ExtResource("37")

[node name="DDD" type="Sprite2D" parent="Table/Paper_04"]
position = Vector2(-41, -121)
texture = ExtResource("35")

[node name="Frame" type="Node2D" parent="Table"]
visible = false
position = Vector2(1333, 546)

[node name="Bottom" type="Sprite2D" parent="Table/Frame"]
texture = ExtResource("38")

[node name="Paper" type="Sprite2D" parent="Table/Frame"]
texture = ExtResource("39")

[node name="All" type="Node2D" parent="Table/Frame/Paper"]
position = Vector2(-17, -34)
scale = Vector2(0.75, 0.75)
skew = 0.282743

[node name="Text" type="Control" parent="Table/Frame/Paper/All"]
layout_mode = 3
anchors_preset = 0
offset_left = 8.90105
offset_top = -11.1077
offset_right = 48.901
offset_bottom = 28.8923

[node name="Title" type="Label" parent="Table/Frame/Paper/All/Text"]
layout_mode = 0
offset_left = -363.37
offset_top = -510.575
offset_right = 366.63
offset_bottom = -410.575
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("32")
theme_override_font_sizes/font_size = 80
text = "honorable Employee"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Main" type="Label" parent="Table/Frame/Paper/All/Text"]
layout_mode = 0
offset_left = -370.122
offset_top = -294.354
offset_right = 359.878
offset_bottom = 190.646
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 40
theme_override_fonts/font = ExtResource("32")
theme_override_font_sizes/font_size = 64
text = "This document certifies that you are the best doorman your building has ever had.
Congratulations."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="DDD" type="Sprite2D" parent="Table/Frame/Paper/All/Text"]
position = Vector2(-1.85242, 423.482)
texture = ExtResource("35")

[node name="Top" type="Sprite2D" parent="Table/Frame"]
texture = ExtResource("40")

[node name="Bag" type="Node2D" parent="."]
visible = false

[node name="Background" type="Sprite2D" parent="Bag"]
modulate = Color(0.827451, 0.733333, 0.670588, 1)
z_index = -100
position = Vector2(682, 638)
scale = Vector2(0.6, 0.6)
texture = ExtResource("41")

[node name="Light" type="Sprite2D" parent="Bag"]
position = Vector2(888, 512)
scale = Vector2(0.5, 0.5)
texture = ExtResource("42")

[node name="Bag" type="Sprite2D" parent="Bag"]
z_index = 50
position = Vector2(964, 584)
scale = Vector2(0.5, 0.5)
texture = ExtResource("43")

[node name="Black" type="Sprite2D" parent="Bag"]
modulate = Color(0, 0, 0, 1)
z_index = 500
scale = Vector2(8, 4)
texture = ExtResource("8")

[node name="Characters" type="Node2D" parent="."]
z_index = -52

[node name="Window_SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("44")

[node name="Background_SFX" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("45")

[node name="Voice_05" type="AudioStreamPlayer" parent="."]
stream = ExtResource("46")

[node name="Bite" type="AudioStreamPlayer" parent="."]
stream = ExtResource("47")

[node name="Magic_Dust" type="AudioStreamPlayer" parent="."]
stream = ExtResource("48")

[node name="Between_chars" type="Timer" parent="."]
wait_time = 5.0

[node name="Jail" type="AudioStreamPlayer" parent="."]
stream = ExtResource("49")

[node name="Chains" type="AudioStreamPlayer" parent="."]
stream = ExtResource("50")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("51")
pitch_scale = 0.5

[node name="Trophie" parent="." instance=ExtResource("4")]
visible = false
position = Vector2(613, 841)

[node name="Select" type="AudioStreamPlayer" parent="."]
stream = ExtResource("52")

[node name="Accept" type="AudioStreamPlayer" parent="."]
stream = ExtResource("53")

[node name="Zipper" type="AudioStreamPlayer" parent="."]
stream = ExtResource("54")
pitch_scale = 0.85

[node name="Switch" type="AudioStreamPlayer" parent="."]
stream = ExtResource("55")

[connection signal="timeout" from="Camera/Text/Time_Between_Text" to="." method="_on_time_between_text_timeout"]
[connection signal="mouse_entered" from="Table/Paper_03/Text/Menu" to="." method="_on_menu_mouse_entered"]
[connection signal="mouse_exited" from="Table/Paper_03/Text/Menu" to="." method="_on_menu_mouse_exited"]
[connection signal="pressed" from="Table/Paper_03/Text/Menu" to="." method="_on_menu_pressed"]
[connection signal="mouse_entered" from="Table/Paper_03/Text/Record" to="." method="_on_record_mouse_entered"]
[connection signal="mouse_exited" from="Table/Paper_03/Text/Record" to="." method="_on_record_mouse_exited"]
[connection signal="pressed" from="Table/Paper_03/Text/Record" to="." method="_on_record_pressed"]
[connection signal="mouse_entered" from="Table/Paper_03/Text/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="mouse_exited" from="Table/Paper_03/Text/Quit" to="." method="_on_quit_mouse_exited"]
[connection signal="pressed" from="Table/Paper_03/Text/Quit" to="." method="_on_quit_pressed"]
[connection signal="timeout" from="Between_chars" to="." method="_on_time_between_text_timeout"]
